# automaldesc

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/: inference.yaml  train.yaml  zero3.yaml
prompts/: coherence-filter.jinja  seed-summarisation.jinja  seed-system.txt  training.jinja
scripts/: inference.slurm  train.slurm
src/automaldesc/: evaluate.py  filtering.py  inference.py  mcnemar.py  train.py  util.py
tests/: test_evaluate.py
