[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automaldesc"
version = "1.0.0"
description = "Research code for the \"AutoMalDesc\" article."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "cmake",
    "datasets>=4.0.0",
    "jinja2>=3.1.6",
    "mlflow>=3.1.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "peft==0.15.1",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "scipy>=1.16.1",
    "simple-parsing>=0.1.7",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.51.3",
    "trl==0.16.1",
    "vllm",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "neovim>=0.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.pylint.main]
max-line-length = 110
enable = ["useless-suppression"]
disable = [
    "fixme",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals",
]

[tool.mypy]
allow_redefinition = false
ignore_missing_imports = true
namespace_packages = false
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
